<resources>
    <string name="app_name">dnbootstrap</string>
    <string name="error">Error</string>
    <string name="extract_runtime">Unpacking files. Please do not turn off your device</string>
    <string name="require_game_copy">Please download a copy of Vintage Story 1.21.6 (Linux version: vs_client_linux-*.tar.gz) from the Client Area and then select it in your file manager using the button below.\n\n This application is EXPERIMENTAL and you may find BUGS or it may NOT WORK FOR YOU AT ALL.</string>
    <string name="select">Select</string>
    <string name="grid_layout_alignment_left">From left</string>
    <string name="grid_layout_alignment_right">From right</string>
    <string name="grid_layout_alignment_top">From top</string>
    <string name="grid_layout_alignment_bottom">From bottom</string>
    <string name="grid_layout_alignment_center">From center</string>
    <string name="grid_layout_edit_title">Button settings</string>
    <string name="grid_layout_edit_size">Button size</string>
    <string name="grid_layout_edit_position_horizontal">Horizontal position</string>
    <string name="grid_layout_edit_position_vertical">Vertical position</string>
    <string name="grid_layout_edit_key_code">Key codes</string>
    <string name="grid_layout_edit_show_in_game">Show in game</string>
    <string name="grid_layout_edit_show_in_menus">Show in menus</string>
    <string name="grid_layout_edit_sticky">Sticky</string>
    <string name="grid_layout_edit_moves_cursor">Moves cursor</string>
    <string name="grid_layout_edit_clone">Clone</string>
    <string name="grid_layout_edit_delete">Delete</string>
    <string name="grid_layout_edit_button_label">Label</string>
    <string name="grid_layout_edit_background">Background</string>
    <string name="grid_layout_edit_background_label_color">Color</string>
    <string name="grid_layout_edit_background_label_icon">Icon</string>
    <string name="grid_layout_edit_background_icon_description">Icon</string>
    <string name="grid_layout_global_grid_pitch">Grid pitch</string>
    <string name="grid_layout_global_auto_align">Automatically select alignment settings</string>
    <string name="grid_layout_global_cursor_behavior">Cursor to touch position</string>
    <string name="grid_layout_global_edit_title">Global settings</string>
    <string name="grid_layout_global_add_button">Add button</string>
    <string name="grid_layout_global_add_joystick">Add joystick</string>
    <string name="grid_layout_global_save">Save</string>
    <string name="grid_layout_global_exit">Exit</string>
    <string name="grid_layout_global_must_have_editor_btn">The control layout must have a button to open the layout editor!</string>
    <string name="grid_layout_editor_hint">Tap a button to edit its settings\nTap the grid to edit global settings and add buttons</string>
    <string name="joystick_auto_center">Auto-center joystick handle</string>
    <string name="grid_layout_show_in_game">Show in game</string>
    <string name="grid_layout_show_in_menu">Show in menu</string>
    <string name="manage_data_uninstall_game">Uninstall Vintage Story (preserves user data)</string>
    <string name="manage_data_uninstall_components">Uninstall all components (preserves user data)</string>
    <string name="manage_data_uninstall_everything">Clear all data (WILL DELETE YOUR SAVES)</string>
    <string name="manage_data_share_log_file">Open data directory</string>
    <string name="manage_data_done">Done!</string>
    <string name="storageProviderAuthorities">git.artdeell.dnboostrap.gamefiles</string>
</resources>