<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="@dimen/global_margin"
    android:paddingTop="@dimen/global_margin">

    <TextView
        android:id="@+id/editor_global_pitch_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grid_layout_global_grid_pitch"/>

    <TextView
        android:id="@+id/editor_global_pitch_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/editor_global_pitch_seek"
        app:layout_constraintBottom_toBottomOf="@id/editor_global_pitch_seek"
        tools:text="10 dp"/>
    
    <SeekBar
        android:id="@+id/editor_global_pitch_seek"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:min="3"
        android:max="60"
        app:layout_constraintTop_toBottomOf="@id/editor_global_pitch_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editor_global_pitch_view"/>
    
    

    <CheckBox
        android:id="@+id/editor_global_auto_align"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grid_layout_global_auto_align"
        android:layout_marginTop="@dimen/global_margin"
        app:layout_constraintTop_toBottomOf="@id/editor_global_pitch_seek" />

    <View
        android:id="@+id/editor_global_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="@dimen/global_margin"
        app:layout_constraintTop_toBottomOf="@id/editor_global_auto_align" />

    <Button
        android:id="@+id/editor_global_add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/grid_layout_global_add_button"
        android:layout_marginTop="@dimen/global_margin"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toBottomOf="@id/editor_global_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editor_global_add_joystick"
        app:layout_constraintHorizontal_weight="1" />

    <Button
        android:id="@+id/editor_global_add_joystick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/grid_layout_global_add_joystick"
        android:layout_marginTop="@dimen/global_margin"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@id/editor_global_divider"
        app:layout_constraintStart_toEndOf="@id/editor_global_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1" />


</androidx.constraintlayout.widget.ConstraintLayout>